--- a/pages/formateur/dashboard.html
+++ b/pages/formateur/dashboard.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="dashboard-layout">
-        <!-- Sidebar injected by JS -->
+        <div id="sidebar-container"></div>
         <script src="../../js/components/sidebar-formateur.js"></script>
 
         <main class="main-content">
@@ -54,7 +54,8 @@
                         <p
                             style="color: var(--gray-500); font-weight: 500; font-size: 0.875rem; margin-bottom: 0.25rem;">
                             Étudiants Connectés</p>
-                        <h3 style="font-size: 1.875rem; font-weight: 700; color: var(--gray-900);">42</h3>
+                        <h3 id="stat-students-online"
+                            style="font-size: 1.875rem; font-weight: 700; color: var(--gray-900);">42</h3>
                         <div
                             style="display: flex; align-items: center; gap: 0.25rem; margin-top: 0.5rem; color: var(--green-600); font-size: 0.75rem; font-weight: 500;">
                             <span
@@ -72,12 +73,13 @@
                     <div>
                         <p
                             style="color: var(--gray-500); font-weight: 500; font-size: 0.875rem; margin-bottom: 0.25rem;">
-                            Étudiants Intéressés</p>
-                        <h3 style="font-size: 1.875rem; font-weight: 700; color: var(--gray-900);">128</h3>
+                            Total Étudiants</p>
+                        <h3 id="stat-students-total"
+                            style="font-size: 1.875rem; font-weight: 700; color: var(--gray-900);">128</h3>
                         <div
                             style="display: flex; align-items: center; gap: 0.25rem; margin-top: 0.5rem; color: var(--blue-600); font-size: 0.75rem; font-weight: 500;">
                             <i data-lucide="trending-up" style="width: 12px;"></i>
-                            +5 cette semaine
+                            Inscrits dans vos classes
                         </div>
                     </div>
                     <div
@@ -133,7 +135,7 @@
                         style="font-size: 0.75rem; font-weight: 700; color: var(--gray-400); text-transform: uppercase; letter-spacing: 0.05em; margin-bottom: 0.75rem;">
                         Actions Rapides</h3>
 
-                    <a href="#" class="action-card">
+                    <a href="paiements.html" class="action-card">
                         <div style="display: flex; align-items: center; gap: 0.75rem;">
                             <div
                                 style="padding: 0.5rem; background: var(--orange-50); color: orange; border-radius: 0.5rem;">
@@ -147,7 +149,7 @@
                         <i data-lucide="arrow-right" style="width: 16px; color: var(--gray-400);"></i>
                     </a>
 
-                    <a href="#" class="action-card">
+                    <a href="#messages-section" class="action-card">
                         <div style="display: flex; align-items: center; gap: 0.75rem;">
                             <div
                                 style="padding: 0.5rem; background: var(--blue-50); color: var(--blue-600); border-radius: 0.5rem;">
@@ -161,7 +163,7 @@
                         <i data-lucide="arrow-right" style="width: 16px; color: var(--gray-400);"></i>
                     </a>
 
-                    <a href="#" class="action-card">
+                    <a href="paiements.html" class="action-card">
                         <div style="display: flex; align-items: center; gap: 0.75rem;">
                             <div
                                 style="padding: 0.5rem; background: var(--red-50); color: var(--red-600); border-radius: 0.5rem;">
@@ -215,7 +217,7 @@
                 </div>
 
                 <!-- Messages -->
-                <div
+                <div id="messages-section"
                     style="background: white; border-radius: 1rem; padding: 1.5rem; border: 1px solid var(--gray-100);">
                     <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1.5rem;">
                         <i data-lucide="message-circle" style="width: 20px; color: var(--blue-600);"></i>
@@ -296,6 +298,7 @@
     </div>
 
     <script src="../../js/main.js"></script>
+    <script src="../../js/data-manager.js"></script>
     <script>
         // Initialize Lucide icons
         lucide.createIcons();
@@ -305,6 +308,19 @@
         if (!user || user.role !== 'formateur') {
             window.location.href = '../login-formateur.html';
         }
+
+        // Init Data Manager
+        DataManager.init();
+
+        // Update Stats
+        const classes = DataManager.getClasses();
+        const totalStudents = classes.reduce((acc, c) => acc + (c.students || 0), 0);
+
+        // Mock online students: random between 30 and 50
+        const onlineStudents = Math.floor(Math.random() * (50 - 30 + 1)) + 30;
+
+        document.getElementById('stat-students-online').textContent = onlineStudents;
+        document.getElementById('stat-students-total').textContent = totalStudents;
 
         // Countdown Timer
         function updateCountdown() {
