--- a/pages/parent/dashboard.html
+++ b/pages/parent/dashboard.html
@@ -6,131 +6,195 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau de Bord Parent - EduSpace</title>
     <link rel="stylesheet" href="../../css/main.css">
-
-    <style>
-        body {
-            background: var(--gray-50);
+    <link rel="stylesheet" href="../../css/dashboard.css">
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#2563eb',
+                        secondary: '#4f46e5',
+                    }
+                }
+            }
         }
-
-        .dashboard {
-            min-height: 100vh;
-            padding: 2rem;
-        }
-
-        .dashboard-header {
-            background: white;
-            padding: 2rem;
-            border-radius: 1rem;
-            margin-bottom: 2rem;
-            box-shadow: var(--shadow-sm);
-        }
-
-        .dashboard-header h1 {
-            font-size: 2rem;
-            color: var(--gray-900);
-            margin-bottom: 0.5rem;
-        }
-
-        .dashboard-header p {
-            color: var(--gray-600);
-        }
-
-        .dashboard-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
-            margin-bottom: 2rem;
-        }
-
-        .dashboard-card {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 1rem;
-            box-shadow: var(--shadow-sm);
-        }
-
-        .dashboard-card h3 {
-            font-size: 1.25rem;
-            color: var(--gray-900);
-            margin-bottom: 1rem;
-        }
-
-        .btn-logout {
-            background: var(--red-600);
-            color: white;
-            padding: 0.75rem 1.5rem;
-            border: none;
-            border-radius: 0.5rem;
-            cursor: pointer;
-            font-weight: 600;
-        }
-
-        .btn-logout:hover {
-            background: var(--red-700);
-        }
-
-        .btn-action {
-            background: var(--blue-600);
-            color: white;
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: 0.5rem;
-            cursor: pointer;
-            font-size: 0.875rem;
-            margin-top: 1rem;
-        }
-
-        .btn-action:hover {
-            background: var(--blue-700);
-        }
-    </style>
+    </script>
 </head>
 
-<body>
-    <div class="dashboard container">
-        <div class="dashboard-header">
-            <h1>Bienvenue, Parent! 👨‍👩‍👧‍👦</h1>
-            <p>Suivez la scolarité de votre enfant</p>
-            <button class="btn-logout" onclick="logout()">Déconnexion</button>
-        </div>
+<body class="bg-gray-50">
 
-        <div class="dashboard-grid">
-            <div class="dashboard-card">
-                <h3>Progression</h3>
-                <p>Consultez les progrès de votre enfant.</p>
-                <button class="btn-action">Voir les détails</button>
+    <div class="dashboard-layout flex">
+        <!-- Sidebar Container -->
+        <div id="sidebar-container"></div>
+
+        <!-- Main Content -->
+        <main class="flex-1 ml-[280px] p-8 transition-all duration-300 main-content">
+
+            <!-- Header -->
+            <div class="flex justify-between items-center mb-8">
+                <div>
+                    <h1 class="text-3xl font-bold text-gray-900">Espace Parents 👨‍👩‍👧‍👦</h1>
+                    <p class="text-gray-500">Suivez la scolarité de vos enfants en temps réel</p>
+                </div>
             </div>
 
-            <div class="dashboard-card">
-                <h3>Cours Inscrits</h3>
-                <p>Liste des cours auxquels votre enfant est inscrit.</p>
-                <button class="btn-action">Voir les cours</button>
+            <!-- Child Selector -->
+            <div class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6 mb-8">
+                <h2 class="text-lg font-bold text-gray-900 mb-4">Sélectionner un enfant</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4" id="children-grid">
+                    <!-- Populated by JS -->
+                    <button
+                        class="flex items-center gap-4 p-4 rounded-xl border-2 border-blue-600 bg-blue-50 transition-all">
+                        <div
+                            class="w-12 h-12 rounded-full bg-blue-200 flex items-center justify-center text-blue-700 font-bold text-lg">
+                            AM</div>
+                        <div class="text-left">
+                            <p class="font-bold text-gray-900">Ahmed Mani</p>
+                            <p class="text-sm text-gray-500">Terminale</p>
+                        </div>
+                        <i data-lucide="check-circle" class="w-5 h-5 text-blue-600 ml-auto"></i>
+                    </button>
+
+                    <button
+                        class="flex items-center gap-4 p-4 rounded-xl border-2 border-gray-100 hover:border-gray-300 transition-all opacity-60 hover:opacity-100">
+                        <div
+                            class="w-12 h-12 rounded-full bg-purple-200 flex items-center justify-center text-purple-700 font-bold text-lg">
+                            LM</div>
+                        <div class="text-left">
+                            <p class="font-bold text-gray-900">Lina Mani</p>
+                            <p class="text-sm text-gray-500">3ème Année</p>
+                        </div>
+                    </button>
+
+                    <button
+                        class="flex items-center justify-center gap-2 p-4 rounded-xl border-2 border-dashed border-gray-300 text-gray-400 hover:border-blue-400 hover:text-blue-500 transition-all">
+                        <i data-lucide="plus" class="w-5 h-5"></i>
+                        <span class="font-medium">Ajouter un enfant</span>
+                    </button>
+                </div>
             </div>
 
-            <div class="dashboard-card">
-                <h3>Messages</h3>
-                <p>Communiquez avec les formateurs.</p>
-                <button class="btn-action">Voir les messages</button>
+            <!-- Stats Overview -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
+                <!-- Average -->
+                <div class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="p-3 bg-green-50 rounded-xl">
+                            <i data-lucide="trending-up" class="w-6 h-6 text-green-600"></i>
+                        </div>
+                        <span class="text-3xl font-bold text-gray-900">14.5/20</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-gray-600">Moyenne Générale</p>
+                        <p class="text-xs text-green-600 mt-1 flex items-center gap-1">
+                            <i data-lucide="arrow-up" class="w-3 h-3"></i> +0.5 vs T1
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Absences -->
+                <div class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="p-3 bg-orange-50 rounded-xl">
+                            <i data-lucide="calendar-off" class="w-6 h-6 text-orange-600"></i>
+                        </div>
+                        <span class="text-3xl font-bold text-gray-900">3</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-gray-600">Absences</p>
+                        <p class="text-xs text-red-500 mt-1 font-bold">1 non justifiée</p>
+                    </div>
+                </div>
+
+                <!-- Payments -->
+                <div class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="p-3 bg-red-50 rounded-xl">
+                            <i data-lucide="alert-circle" class="w-6 h-6 text-red-600"></i>
+                        </div>
+                        <span class="text-3xl font-bold text-gray-900">1</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-gray-600">Paiement en retard</p>
+                        <p class="text-xs text-gray-500 mt-1">350.00 TND dû</p>
+                    </div>
+                </div>
+
+                <!-- Rank -->
+                <div class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="p-3 bg-blue-50 rounded-xl">
+                            <i data-lucide="award" class="w-6 h-6 text-blue-600"></i>
+                        </div>
+                        <span class="text-3xl font-bold text-gray-900">5ème</span>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-gray-600">Classement</p>
+                        <p class="text-xs text-gray-500 mt-1">Sur 28 élèves</p>
+                    </div>
+                </div>
             </div>
 
-            <div class="dashboard-card">
-                <h3>Paiements</h3>
-                <p>Gérez vos paiements et factures.</p>
-                <button class="btn-action">Voir les paiements</button>
+            <!-- Quick Actions -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <!-- Performance Card -->
+                <div
+                    class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6 group cursor-pointer hover:border-blue-200 transition-all">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="flex items-center gap-3">
+                            <div class="p-2 bg-purple-50 rounded-lg">
+                                <i data-lucide="file-text" class="w-5 h-5 text-purple-600"></i>
+                            </div>
+                            <h3 class="font-bold text-gray-900">Bulletins & Notes</h3>
+                        </div>
+                        <i data-lucide="chevron-right"
+                            class="w-5 h-5 text-gray-400 group-hover:text-blue-600 transition-colors"></i>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-4">Consultez le détail des notes, devoirs et appréciations des
+                        professeurs.</p>
+                    <div class="w-full bg-gray-100 rounded-full h-2 mb-2">
+                        <div class="bg-purple-600 h-2 rounded-full" style="width: 75%"></div>
+                    </div>
+                    <p class="text-xs text-right text-gray-500">Dernière note: 16/20 (Maths)</p>
+                </div>
+
+                <!-- Schedule Card -->
+                <div
+                    class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6 group cursor-pointer hover:border-blue-200 transition-all">
+                    <div class="flex items-center justify-between mb-4">
+                        <div class="flex items-center gap-3">
+                            <div class="p-2 bg-blue-50 rounded-lg">
+                                <i data-lucide="calendar" class="w-5 h-5 text-blue-600"></i>
+                            </div>
+                            <h3 class="font-bold text-gray-900">Emploi du temps</h3>
+                        </div>
+                        <i data-lucide="chevron-right"
+                            class="w-5 h-5 text-gray-400 group-hover:text-blue-600 transition-colors"></i>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="flex items-center gap-3 text-sm p-3 bg-gray-50 rounded-xl">
+                            <span class="font-bold text-blue-600 w-16">08:00</span>
+                            <span class="font-medium text-gray-900">Mathématiques</span>
+                            <span class="text-gray-400 text-xs ml-auto">Salle A12</span>
+                        </div>
+                        <div class="flex items-center gap-3 text-sm p-3 bg-gray-50 rounded-xl">
+                            <span class="font-bold text-blue-600 w-16">10:00</span>
+                            <span class="font-medium text-gray-900">Physique</span>
+                            <span class="text-gray-400 text-xs ml-auto">Labo 2</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
+
+        </main>
     </div>
 
-    <script src="../../js/main.js"></script>
+    <!-- Scripts -->
+    <script src="../../js/components/sidebar-parent.js"></script>
     <script>
-        const user = window.eduspace.utils.getCurrentUser();
-        if (!user || user.role !== 'parent') {
-            window.location.href = '../login-parent.html';
-        }
-
-        function logout() {
-            window.eduspace.utils.logout();
-        }
+        lucide.createIcons();
     </script>
 </body>
 
