feat: Complete CRM implementation with analytics dashboard
- Added role-based enterprise sidebar filtering
- Implemented HubSpot-style CRM with Kanban board
- Added Facebook leads integration simulation
- Created comprehensive analytics/reports page with Chart.js
- Updated KPIs for commercial dashboard
- Added enterprise role selection pages
- Enhanced student/parent/instructor registration flows

--- a/pages/entreprise/inscription.html
+++ b/pages/entreprise/inscription.html
@@ -353,6 +353,8 @@
                 btnNext.innerHTML = '<i data-lucide="check" class="w-5 h-5"></i> Valider Inscription';
                 btnNext.onclick = () => finishRegistration();
             }
+            // Re-render icons
+            if (window.lucide) lucide.createIcons();
         }
 
         function updateTotal() {
