--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/components.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#4f46e5',
+                        secondary: '#4338ca',
+                    }
+                }
+            }
+        }
+    </script>
 
     <style>
         /* Page-specific styles */
@@ -165,6 +179,13 @@
             La plateforme de formation en ligne qui connecte formateurs et apprenants
         </p>
 
+        <div class="mb-12 fade-in" style="animation-delay: 0.2s">
+            <a href="pages/catalogue.html"
+                class="inline-flex items-center gap-2 px-8 py-4 bg-indigo-600 hover:bg-indigo-700 text-white rounded-full font-bold shadow-lg shadow-indigo-200 transition-all hover:scale-105 mx-auto">
+                <i data-lucide="search" class="w-5 h-5"></i> Explorer le Catalogue
+            </a>
+        </div>
+
         <!-- Role Cards -->
         <div class="role-cards">
             <a href="pages/login-formateur.html" class="role-card fade-in">
@@ -202,7 +223,7 @@
                 <p>Suivez la progression de vos enfants</p>
             </a>
 
-            <a href="pages/login-entreprise.html" class="role-card fade-in" style="animation-delay: 0.3s">
+            <a href="pages/entreprise/login-choix.html" class="role-card fade-in" style="animation-delay: 0.3s">
                 <div class="role-card-icon">
                     <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
@@ -214,6 +235,241 @@
             </a>
         </div>
     </section>
+
+    <!-- FEATURED SECTIONS -->
+    <main class="container mx-auto px-6 py-16 space-y-24">
+
+        <!-- TOP FORMATEURS -->
+        <section>
+            <div class="text-center mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Nos Stars de l'Enseignement 🌟</h2>
+                <p class="text-lg text-gray-600 max-w-2xl mx-auto">Découvrez les experts qui transforment
+                    l'apprentissage.</p>
+            </div>
+
+            <!-- Categories Tabs (Mock) -->
+            <div class="flex justify-center gap-4 mb-10 flex-wrap">
+                <button
+                    class="px-6 py-2 bg-indigo-600 text-white rounded-full font-bold shadow-lg shadow-indigo-200 hover:scale-105 transition-transform">Les
+                    Plus Vendus 🔥</button>
+                <button
+                    class="px-6 py-2 bg-white text-gray-600 border border-gray-200 rounded-full font-bold hover:bg-gray-50 hover:text-indigo-600 transition-colors">Les
+                    Plus Renommés 🏆</button>
+                <button
+                    class="px-6 py-2 bg-white text-gray-600 border border-gray-200 rounded-full font-bold hover:bg-gray-50 hover:text-indigo-600 transition-colors">Les
+                    Mieux Notés ⭐</button>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <!-- Instructor Card 1 -->
+                <div
+                    class="bg-white rounded-2xl shadow-xl shadow-gray-100 overflow-hidden hover:-translate-y-2 transition-transform duration-300 border border-gray-100 group">
+                    <div class="relative h-64 bg-gray-200">
+                        <img src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                            alt="Instructor"
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                        <div
+                            class="absolute top-4 left-4 bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full shadow-md flex items-center gap-1">
+                            <i data-lucide="flame" class="w-3 h-3"></i> Best Seller
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center justify-between mb-2">
+                            <h3 class="font-bold text-lg text-gray-900">Ahmed Ben Ali</h3>
+                            <div class="flex items-center gap-1 text-yellow-500 font-bold text-sm">
+                                <i data-lucide="star" class="w-4 h-4 fill-current"></i> 4.9
+                            </div>
+                        </div>
+                        <p class="text-sm text-gray-500 mb-4">Expert DevOps & Cloud Computing</p>
+                        <div class="flex items-center justify-between text-sm">
+                            <span class="text-gray-400 flex items-center gap-1"><i data-lucide="users"
+                                    class="w-4 h-4"></i> 15k+ élèves</span>
+                            <span class="text-indigo-600 font-bold bg-indigo-50 px-3 py-1 rounded-lg">Top 1%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Instructor Card 2 -->
+                <div
+                    class="bg-white rounded-2xl shadow-xl shadow-gray-100 overflow-hidden hover:-translate-y-2 transition-transform duration-300 border border-gray-100 group">
+                    <div class="relative h-64 bg-gray-200">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                            alt="Instructor"
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                        <div
+                            class="absolute top-4 left-4 bg-purple-100 text-purple-700 text-xs font-bold px-3 py-1 rounded-full shadow-md flex items-center gap-1">
+                            <i data-lucide="award" class="w-3 h-3"></i> Renommée
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center justify-between mb-2">
+                            <h3 class="font-bold text-lg text-gray-900">Sarah M.</h3>
+                            <div class="flex items-center gap-1 text-yellow-500 font-bold text-sm">
+                                <i data-lucide="star" class="w-4 h-4 fill-current"></i> 5.0
+                            </div>
+                        </div>
+                        <p class="text-sm text-gray-500 mb-4">Design UX/UI & Créativité</p>
+                        <div class="flex items-center justify-between text-sm">
+                            <span class="text-gray-400 flex items-center gap-1"><i data-lucide="users"
+                                    class="w-4 h-4"></i> 8k+ élèves</span>
+                            <span class="text-purple-600 font-bold bg-purple-50 px-3 py-1 rounded-lg">Excellence</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Instructor Card 3 -->
+                <div
+                    class="bg-white rounded-2xl shadow-xl shadow-gray-100 overflow-hidden hover:-translate-y-2 transition-transform duration-300 border border-gray-100 group">
+                    <div class="relative h-64 bg-gray-200">
+                        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                            alt="Instructor"
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                        <div
+                            class="absolute top-4 left-4 bg-green-100 text-green-700 text-xs font-bold px-3 py-1 rounded-full shadow-md flex items-center gap-1">
+                            <i data-lucide="thumbs-up" class="w-3 h-3"></i> Recommandé
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center justify-between mb-2">
+                            <h3 class="font-bold text-lg text-gray-900">Leila K.</h3>
+                            <div class="flex items-center gap-1 text-yellow-500 font-bold text-sm">
+                                <i data-lucide="star" class="w-4 h-4 fill-current"></i> 4.8
+                            </div>
+                        </div>
+                        <p class="text-sm text-gray-500 mb-4">Marketing Digital & SEO</p>
+                        <div class="flex items-center justify-between text-sm">
+                            <span class="text-gray-400 flex items-center gap-1"><i data-lucide="users"
+                                    class="w-4 h-4"></i> 12k+ élèves</span>
+                            <span class="text-green-600 font-bold bg-green-50 px-3 py-1 rounded-lg">Vérifié</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Instructor Card 4 -->
+                <div
+                    class="bg-white rounded-2xl shadow-xl shadow-gray-100 overflow-hidden hover:-translate-y-2 transition-transform duration-300 border border-gray-100 group">
+                    <div class="relative h-64 bg-gray-200">
+                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                            alt="Instructor"
+                            class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                        <div
+                            class="absolute top-4 left-4 bg-blue-100 text-blue-700 text-xs font-bold px-3 py-1 rounded-full shadow-md flex items-center gap-1">
+                            <i data-lucide="trending-up" class="w-3 h-3"></i> En Hausse
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center justify-between mb-2">
+                            <h3 class="font-bold text-lg text-gray-900">Karim S.</h3>
+                            <div class="flex items-center gap-1 text-yellow-500 font-bold text-sm">
+                                <i data-lucide="star" class="w-4 h-4 fill-current"></i> 4.7
+                            </div>
+                        </div>
+                        <p class="text-sm text-gray-500 mb-4">Développement Mobile iOS</p>
+                        <div class="flex items-center justify-between text-sm">
+                            <span class="text-gray-400 flex items-center gap-1"><i data-lucide="users"
+                                    class="w-4 h-4"></i> 5k+ élèves</span>
+                            <span class="text-blue-600 font-bold bg-blue-50 px-3 py-1 rounded-lg">Nouveau</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- TOP CENTERS -->
+        <section>
+            <div class="text-center mb-12">
+                <hr class="border-gray-100 mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Centres d'Excellence 🏆</h2>
+                <p class="text-lg text-gray-600 max-w-2xl mx-auto">Nos bureaux numériques de formation partenaires
+                    certifiés.</p>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <!-- Center Card 1 -->
+                <div
+                    class="bg-gradient-to-br from-indigo-900 to-indigo-800 rounded-3xl p-8 text-white relative overflow-hidden group hover:shadow-2xl hover:shadow-indigo-500/20 transition-all">
+                    <div
+                        class="absolute top-0 right-0 p-32 bg-white/5 rounded-full blur-2xl -mr-16 -mt-16 transition-all group-hover:scale-150">
+                    </div>
+
+                    <div class="relative z-10 flex flex-col h-full">
+                        <div class="flex items-start justify-between mb-6">
+                            <div
+                                class="w-16 h-16 bg-white rounded-xl flex items-center justify-center text-indigo-900 font-bold text-2xl shadow-lg">
+                                G</div>
+                            <span
+                                class="px-3 py-1 bg-white/10 backdrop-blur-md rounded-full text-xs font-bold border border-white/20">Certifié
+                                ISO</span>
+                        </div>
+
+                        <h3 class="text-2xl font-bold mb-2">GoMyCode</h3>
+                        <p class="text-indigo-200 mb-6 flex-1">Le leader de la formation tech en Afrique. Bootcamps
+                            intensifs et communauté active.</p>
+
+                        <div class="flex items-center gap-4 text-sm font-medium pt-6 border-t border-white/10">
+                            <span><i data-lucide="map-pin" class="w-4 h-4 inline mr-1"></i> Tunis, Sousse, Sfax</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Center Card 2 -->
+                <div
+                    class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-3xl p-8 text-white relative overflow-hidden group hover:shadow-2xl hover:shadow-gray-500/20 transition-all">
+                    <div
+                        class="absolute top-0 right-0 p-32 bg-white/5 rounded-full blur-2xl -mr-16 -mt-16 transition-all group-hover:scale-150">
+                    </div>
+                    <div class="relative z-10 flex flex-col h-full">
+                        <div class="flex items-start justify-between mb-6">
+                            <div
+                                class="w-16 h-16 bg-white rounded-xl flex items-center justify-center text-gray-900 font-bold text-2xl shadow-lg">
+                                R</div>
+                            <span
+                                class="px-3 py-1 bg-white/10 backdrop-blur-md rounded-full text-xs font-bold border border-white/20">Partenaire
+                                Digital</span>
+                        </div>
+
+                        <h3 class="text-2xl font-bold mb-2">RBK Tunisia</h3>
+                        <p class="text-gray-300 mb-6 flex-1">Formation intensive en développement logiciel. Apprenez à
+                            coder comme un pro.</p>
+
+                        <div class="flex items-center gap-4 text-sm font-medium pt-6 border-t border-white/10">
+                            <span><i data-lucide="map-pin" class="w-4 h-4 inline mr-1"></i> Ariana, Tunis</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Center Card 3 -->
+                <div
+                    class="bg-gradient-to-br from-pink-600 to-rose-600 rounded-3xl p-8 text-white relative overflow-hidden group hover:shadow-2xl hover:shadow-pink-500/20 transition-all">
+                    <div
+                        class="absolute top-0 right-0 p-32 bg-white/5 rounded-full blur-2xl -mr-16 -mt-16 transition-all group-hover:scale-150">
+                    </div>
+                    <div class="relative z-10 flex flex-col h-full">
+                        <div class="flex items-start justify-between mb-6">
+                            <div
+                                class="w-16 h-16 bg-white rounded-xl flex items-center justify-center text-pink-600 font-bold text-2xl shadow-lg">
+                                3</div>
+                            <span
+                                class="px-3 py-1 bg-white/10 backdrop-blur-md rounded-full text-xs font-bold border border-white/20">Design
+                                Hub</span>
+                        </div>
+
+                        <h3 class="text-2xl font-bold mb-2">3W Academy</h3>
+                        <p class="text-pink-100 mb-6 flex-1">Expertise en design et développement web. Une pédagogie par
+                            la pratique.</p>
+
+                        <div class="flex items-center gap-4 text-sm font-medium pt-6 border-t border-white/10">
+                            <span><i data-lucide="map-pin" class="w-4 h-4 inline mr-1"></i> Tunis, Lac 1</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script>
+        lucide.createIcons();
+    </script>
 
     <!-- Footer -->
     <footer id="footer"></footer>
