--- a/pages/formateur/dashboard.html
+++ b/pages/formateur/dashboard.html
@@ -47,7 +47,11 @@
                 </div>
             </header>
 
-            <!-- Analytics Section -->
+            <!-- Analytics Section - Dynamic -->
+            <div id="statsContainer" class="grid-2" style="margin-bottom: 2rem;">
+                <!-- Stats will be loaded dynamically -->
+            </div>
+
             <div class="grid-2" style="margin-bottom: 2rem;">
                 <div class="stat-card">
                     <div>
@@ -260,6 +264,42 @@
                 </div>
             </div>
 
+            <!-- Mes Cours Section - Dynamic -->
+            <div
+                style="margin-top: 2rem; background: white; border-radius: 1rem; padding: 1.5rem; border: 1px solid var(--gray-100);">
+                <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 1.5rem;">
+                    <div style="display: flex; align-items: center; gap: 0.5rem;">
+                        <i data-lucide="book-open" style="width: 20px; color: var(--blue-600);"></i>
+                        <h3 style="font-weight: 700; font-size: 1.125rem;">Mes Cours</h3>
+                    </div>
+                    <button id="createCourseBtn"
+                        style="background: var(--indigo-600); color: white; padding: 0.5rem 1rem; border: none; border-radius: 0.5rem; font-weight: 600; cursor: pointer; display: flex; align-items: center; gap: 0.5rem;">
+                        <i data-lucide="plus" style="width: 16px;"></i> Créer un cours
+                    </button>
+                </div>
+                <div id="coursesContainer" class="grid-2" style="gap: 1rem;">
+                    <!-- Courses will be loaded dynamically -->
+                    <div style="text-center; padding: 2rem; color: var(--gray-500);">
+                        Chargement des cours...
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mes Étudiants Section - Dynamic -->
+            <div
+                style="margin-top: 2rem; background: white; border-radius: 1rem; padding: 1.5rem; border: 1px solid var(--gray-100);">
+                <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1.5rem;">
+                    <i data-lucide="users" style="width: 20px; color: var(--green-600);"></i>
+                    <h3 style="font-weight: 700; font-size: 1.125rem;">Mes Étudiants</h3>
+                </div>
+                <div id="studentsContainer" style="display: flex; flex-direction: column; gap: 0.75rem;">
+                    <!-- Students will be loaded dynamically -->
+                    <div style="text-center; padding: 2rem; color: var(--gray-500);">
+                        Chargement des étudiants...
+                    </div>
+                </div>
+            </div>
+
             <!-- Financial Stats -->
             <div
                 style="margin-top: 2rem; background: white; border-radius: 1rem; padding: 1.5rem; border: 1px solid var(--gray-100);">
@@ -297,8 +337,10 @@
         </main>
     </div>
 
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
+    <script src="../../js/pages/instructor-dashboard.js"></script>
     <script src="../../js/main.js"></script>
-    <script src="../../js/data-manager.js"></script>
     <script>
         // Initialize Lucide icons
         lucide.createIcons();
