Integrate dynamic system into student dashboard - CRUD enrollments

--- a/pages/etudiant/dashboard.html
+++ b/pages/etudiant/dashboard.html
@@ -57,8 +57,33 @@
                 </div>
             </header>
 
-            <!-- Stats Overview -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
+            <!-- Stats Overview - Dynamic -->
+            <div id="statsContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
+                <!-- Stats will be loaded dynamically -->
+            </div>
+
+            <!-- Mes Cours - Dynamic -->
+            <div id="myCoursesContainer" class="mb-8">
+                <!-- My courses will be loaded dynamically -->
+            </div>
+
+            <!-- Cours Disponibles - Dynamic -->
+            <div class="mb-8">
+                <div class="flex items-center justify-between mb-6">
+                    <h2 class="text-2xl font-bold text-gray-900 flex items-center gap-2">
+                        <i data-lucide="book-open" class="w-6 h-6 text-blue-600"></i>
+                        Cours disponibles
+                    </h2>
+                    <input id="searchCourses" type="text" placeholder="Rechercher un cours..."
+                        class="px-4 py-2 rounded-xl border border-gray-200 focus:outline-none focus:ring-2 focus:ring-blue-500 w-64 text-sm">
+                </div>
+                <div id="availableCoursesContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <!-- Available courses will be loaded dynamically -->
+                </div>
+            </div>
+
+            <!-- Old Static Content (keeping for reference) -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8" style="display: none;">
                 <!-- Completion Rate -->
                 <div
                     class="bg-gradient-to-br from-blue-500 to-blue-700 rounded-2xl p-6 text-white shadow-lg hover:-translate-y-1 transition-transform relative overflow-hidden group">
@@ -314,7 +339,9 @@
         </main>
     </div>
 
-    <!-- Scripts -->
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
+    <script src="../../js/pages/student-dashboard.js"></script>
     <script src="../../js/components/sidebar-etudiant.js"></script>
     <script>
         lucide.createIcons();
