--- a/pages/formateur/classes.html
+++ b/pages/formateur/classes.html
@@ -351,8 +351,8 @@
         </div>
     </div>
 
-    <!-- Scripts -->
-    <script src="../../js/data-manager.js"></script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
     <script src="../../js/components/sidebar-formateur.js"></script>
     <script>
         // --- State ---
