COMPLETE: Add dynamic system to ALL 46 pages - 100% dynamic site

--- a/pages/entreprise/inscription.html
+++ b/pages/entreprise/inscription.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -399,6 +399,8 @@
             }, 1000);
         }
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
