--- a/pages/etudiant/live.html
+++ b/pages/etudiant/live.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -488,6 +488,8 @@
         }
 
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
