--- a/pages/etudiant/paiements.html
+++ b/pages/etudiant/paiements.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -278,6 +278,8 @@
             alert('Téléchargement de la facture #' + id);
         }
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
