--- a/pages/parent/eleves.html
+++ b/pages/parent/eleves.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -184,6 +184,8 @@
     <script>
         lucide.createIcons();
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
