--- a/pages/parent/messages.html
+++ b/pages/parent/messages.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -234,6 +234,8 @@
         const messageContainer = document.getElementById('chat-messages');
         messageContainer.scrollTop = messageContainer.scrollHeight;
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
