--- a/pages/parent/profil.html
+++ b/pages/parent/profil.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -266,6 +266,8 @@
             document.getElementById(`section-${sectionId}`).classList.remove('hidden');
         }
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
