--- a/pages/entreprise/classes.html
+++ b/pages/entreprise/classes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -312,6 +312,8 @@
             toggleModal('manageStudentsModal');
         }
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
