--- a/pages/entreprise/dashboard-admin.html
+++ b/pages/entreprise/dashboard-admin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -201,6 +201,8 @@
         // Ideally we would trigger a function in sidebar-entreprise.js to filter links
         lucide.createIcons();
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
