--- a/pages/entreprise/dashboard-formateur.html
+++ b/pages/entreprise/dashboard-formateur.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -144,6 +144,8 @@
     <script>
         lucide.createIcons();
     </script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
