--- a/pages/formateur/paiements.html
+++ b/pages/formateur/paiements.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -319,6 +319,8 @@
 
     <script src="../../js/components/sidebar-formateur.js"></script>
     <script>lucide.createIcons();</script>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
