--- a/pages/parent/inscription.html
+++ b/pages/parent/inscription.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -171,6 +171,8 @@
                     style="color: var(--pink-600); font-weight: bold;">Se connecter</a></p>
         </div>
     </div>
+    <!-- Dynamic System Scripts -->
+    <script src="../../js/core/data-manager.js"></script>
 </body>
 
 </html>
