Force sidebar script reload to fix cache issue

--- a/pages/formateur/dashboard.html
+++ b/pages/formateur/dashboard.html
@@ -237,7 +237,8 @@
 
     <!-- Scripts -->
     <script src="../../js/core/data-manager.js"></script>
-    <script src="../../js/components/sidebar-formateur.js"></script>
+    <!-- Ajout de ?v=2 pour forcer le rechargement du cache et afficher la nouvelle sidebar -->
+    <script src="../../js/components/sidebar-formateur.js?v=2"></script>
     <script src="../../js/pages/instructor-dashboard.js"></script>
 
     <script>
